[package]
name = "evtly-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anymap = "~1.0.0-beta.2"
lazy_static = { version = "~1.4", optional = true }

[features]
global-instance = ["dep:lazy_static"]
