[package]
name = "evtly-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anymap = "~1.0.0-beta.2"
parking_lot = "~0.12"
uuid = { version = "~1.4", features = ["v4", "fast-rng"] }
lazy_static = { version = "~1.4", optional = true }

[features]
global-instance = ["dep:lazy_static"]
